--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>JS-library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/jquery-3.6.0.min.js"></script>
+  <script defer src="js/index.js"></script>
 </head>
 
 <body>
